<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cpassWd"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.005">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/confirm_password"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/PassWd"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="470dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/pass_word"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="655dp"
        android:text="@string/sun_exchange"
        android:textColor="#F87049"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="309dp"
        android:layout_marginBottom="600dp"
        android:text="@string/join"
        android:textColor="#0E0101"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/FName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/First_Name"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/LName"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/last_name"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernamae"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006">

        <android.support.design.widget.TextInputEditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/EmailAddress"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="395dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/edit_text_round"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/PassWd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email_address"
            android:inputType="text"
            android:textColor="#070606" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/createAccont"
        android:layout_width="169dp"
        android:layout_height="51dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button_border"
        android:text="@string/creaan_an_account"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpassWd" />

    <TextView
        android:id="@+id/TV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="38dp"
        android:text="@string/alraedy_have_an_account"
        android:textColor="#F00A0505"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/TV6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccont" />

    <TextView
        android:id="@+id/TV6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="44dp"
        android:text="@string/sign_in"
        android:textColor="#1390F3"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccont"
        app:layout_constraintVertical_bias="0.708" />


</android.support.constraint.ConstraintLayout>